# clipboard-typer

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: clipboard.rs  error.rs  input.rs  main.rs  messages.rs
