[package]
name = "clipboard-typer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
enigo = "0.1"
tao = "0.20"
#arboard = "3"
#global-hotkey = "0.2"
#
#[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
#version = "0.48"
#features = [
#    "Win32_Foundation",
#    "Win32_System_Console",
#    "Win32_System_Threading",
#    "Win32_UI_WindowsAndMessaging"
#]

[profile.release]
lto = true
codegen-units = 1
strip = true
